Changed files structure and made prices downloand with yahoo instead of binance_api.py

--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ ta
 
 # APIs and Requests
 requests==2.31.0
-python-binance==1.0.19
+yfinance
 python-dotenv==1.0.0
 
 # Data Classes and Utilities
