--- a/requirements.txt
+++ b/requirements.txt
@@ -7,13 +7,12 @@ streamlit==1.25.0
 
 # Visualization
 matplotlib==3.7.2
-mplfinance
+mplfinance~=0.12.10b0
 plotly==5.15.0
-ta
+ta~=0.11.0
 
 # APIs and Requests
 requests==2.31.0
-python-dotenv==1.0.0
 
 # Data Classes and Utilities
 dataclasses==0.6
